# api-common-protos

./: .dockerignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE
.circleci/: config.yml
.circleci/packaging/python/: LICENSE  PKG-INFO  README.rst
.github/: sync-repo-settings.yaml
google/api/: BUILD.bazel  annotations.proto  auth.proto  billing.proto  client.proto  common_resources.proto  distribution.proto  endpoint.proto  field_behavior.proto  field_info.proto  launch_stage.proto  logging.proto  longrunning.proto  metadata.proto  monitoring.proto  quota.proto  resource.proto  resources.proto  retry.proto  service.proto  signature.proto  usage.proto
google/iam/v1/: policy.proto
google/logging/type/: http_request.proto  log_severity.proto
google/longrunning/: BUILD.bazel  operations.proto
google/rpc/: BUILD.bazel  code.proto
google/type/: decimal_amount.proto
