# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = [
    "//visibility:private",
])

proto_library(
    name = "google_api_annotations_proto",
    srcs = ["google/api/annotations.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_http_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "google_api_auth_proto",
    srcs = ["google/api/auth.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
    ],
)

proto_library(
    name = "google_api_billing_proto",
    srcs = ["google/api/billing.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
        ":google_api_metric_proto",
    ],
)

proto_library(
    name = "google_api_backend_proto",
    srcs = ["google/api/backend.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_client_proto",
    srcs = ["google/api/client.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "google_api_config_change_proto",
    srcs = ["google/api/config_change.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_consumer_proto",
    srcs = ["google/api/consumer.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_context_proto",
    srcs = ["google/api/context.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_control_proto",
    srcs = ["google/api/control.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_distribution_proto",
    srcs = ["google/api/distribution.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "google_api_documentation_proto",
    srcs = ["google/api/documentation.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_endpoint_proto",
    srcs = ["google/api/endpoint.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
    ],
)

proto_library(
    name = "google_api_field_behavior",
    srcs = ["google/api/field_behavior.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "google_api_http_proto",
    srcs = ["google/api/http.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_httpbody_proto",
    srcs = ["google/api/httpbody.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "google_api_label_proto",
    srcs = ["google/api/label.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_log_proto",
    srcs = ["google/api/log.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_label_proto",
    ],
)

proto_library(
    name = "google_api_logging_proto",
    srcs = ["google/api/logging.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
    ],
)

proto_library(
    name = "google_api_metric_proto",
    srcs = ["google/api/metric.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_label_proto",
    ],
)

proto_library(
    name = "google_api_monitored_resource_proto",
    srcs = ["google/api/monitored_resource.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_label_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "google_api_monitoring_proto",
    srcs = ["google/api/monitoring.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
    ],
)

proto_library(
    name = "google_api_quota_proto",
    srcs = ["google/api/quota.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
    ],
)

proto_library(
    name = "google_api_resource_proto",
    srcs = ["google/api/resource.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "google_api_service_proto",
    srcs = ["google/api/service.proto"],
    visibility = ["//visibility:public"],
    deps = [
      ":google_api_annotations_proto",
      ":google_api_auth_proto",
      ":google_api_backend_proto",
      ":google_api_billing_proto",
      ":google_api_context_proto",
      ":google_api_control_proto",
      ":google_api_documentation_proto",
      ":google_api_endpoint_proto",
      ":google_api_http_proto",
      ":google_api_label_proto",
      ":google_api_log_proto",
      ":google_api_logging_proto",
      ":google_api_metric_proto",
      ":google_api_monitored_resource_proto",
       ":google_api_monitoring_proto",
       ":google_api_quota_proto",
       ":google_api_source_info_proto",
       ":google_api_system_parameter_proto",
       ":google_api_usage_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:api_proto",
        "@com_google_protobuf//:type_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "google_api_source_info_proto",
    srcs = ["google/api/source_info.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "google_api_system_parameter_proto",
    srcs = ["google/api/system_parameter.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "google_api_usage_proto",
    srcs = ["google/api/usage.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":google_api_annotations_proto",
    ],
)
